WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
276609
[css-grid] Grid unnecessarily invalidates certain items when stretching in column axis
https://bugs.webkit.org/show_bug.cgi?id=276609
Summary
[css-grid] Grid unnecessarily invalidates certain items when stretching in co...
Sammy Gill
Reported
2024-07-15 06:57:36 PDT
If a grid item's block size is being stretched in the column axis, grid will invalidate the item if it has percent height descendants. If the item does not have any content or style mutations and no other constraints have changed in the grid, then we may not need to invalidate this item on relayout
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-07-15 06:58:08 PDT
<
rdar://problem/131751762
>
Sammy Gill
Comment 2
2024-07-15 08:21:44 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/30750
EWS
Comment 3
2024-07-18 08:16:59 PDT
Committed
281090@main
(364adc3b7d9e): <
https://commits.webkit.org/281090@main
> Reviewed commits have been landed. Closing PR #30750 and removing active labels.
EWS
Comment 4
2024-07-19 14:29:40 PDT
Committed
280938.75@integration/ci/131751762_364adc3b7d_safari-7619-branch
(6a20b714dfc4): <
https://commits.webkit.org/280938.75@integration/ci/131751762_364adc3b7d_safari-7619-branch
> Reviewed commits have been landed. Closing PR #1444 and removing active labels.
Antoine Quint
Comment 5
2024-09-11 03:37:44 PDT
This yielded a performance regression, tracked by
bug 279492
, undoing some of the progress made in
276633@main
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug